angular strap started

--- a/partials/html/state2.html
+++ b/partials/html/state2.html
@@ -1,1 +1,1 @@
-<div class="row"><div class="col-4 box shadow-one"><h1>Shadow 1</h1></div><div class="col-4 box shadow-two"><h1>Shadow 2</h1></div><div class="col-4 box shadow-three"><h1>Shadow 3</h1></div></div>
+<div class="row box"><div class="col-x12"><h1>Modals</h1><a data-animation="am-slide-top" data-placement="center" bs-modal="modal" class="btn">Modal</a><h1>ALert</h1><a data-placement="top-right" data-container="body" data-duration="3" bs-alert="alert" class="btn">Alert</a></div></div>
