--- a/partials/jade/state2.jade
+++ b/partials/jade/state2.jade
@@ -1,7 +1,7 @@
-.row
-    .col-4.box.shadow-one
-        h1 Shadow 1
-    .col-4.box.shadow-two
-        h1 Shadow 2
-    .col-4.box.shadow-three
-        h1 Shadow 3
+.row.box
+    .col-x12
+        h1 Modals
+        a.btn(data-animation="am-slide-top" data-placement="center" bs-modal="modal") Modal
+
+        h1 ALert
+        a.btn(data-placement="top-right" data-container="body" data-duration="3" bs-alert="alert") Alert
