--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,9 @@ html(ng-app="ubicala")
         title
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1')
+        link(rel="stylesheet", href="components/bootstrap/dist/css/bootstrap.min.css")
+        link(rel="stylesheet", href="components/bootstrap-additions/dist/bootstrap-additions.min.css")
+        link(rel="stylesheet", href="components/angular-motion/dist/angular-motion.min.css")
         link(rel='stylesheet', href='stylesheets/css/main.css')
         //-script(src='javascripts/vendor/modernizr-2.7.1.min.js')
     body(ng-controller="MainCtrl" ng-cloak)
@@ -35,7 +38,14 @@ html(ng-app="ubicala")
         //- script window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')
         script(src="components/jquery/jquery.min.js")
         script(src="components/angular/angular.min.js")
+        script(src="components/angular-animate/angular-animate.min.js")
+        script(src="components/angular-sanitize/angular-sanitize.min.js")
+
         script(src="components/angular-ui-router/release/angular-ui-router.min.js")
+
+        script(src="components/angular-strap/dist/angular-strap.min.js")
+        script(src="components/angular-strap/dist/angular-strap.tpl.min.js")
+
         script(src="js/dist/built.min.js")
 
         //- Google Analytics: change UA-XXXXX-X to be your site's ID.
