--- a/index.jade
+++ b/index.jade
@@ -22,9 +22,9 @@ html(ng-app="ubicala")
             .col-3 {{welcome}}
                 ul
                     li
-                        a(ui-sref="state1" href="javascript:;") State 1
+                        a(ui-sref="home" href="javascript:;") Home
                     li
-                        a(ui-sref="state2" href="javascript:;") State 2
+                        a(ui-sref="styleguide" href="javascript:;") Styleguide
             div.col-9(ui-view)
 
 
