--- a/index.jade
+++ b/index.jade
@@ -36,6 +36,7 @@ html(ng-app="ubicala")
         script(src="components/jquery/jquery.min.js")
         script(src="components/angular/angular.min.js")
         script(src="components/angular-ui-router/release/angular-ui-router.min.js")
+        script(src="components/angular-hotkeys/build/hotkeys.min.js")
         script(src="js/dist/built.min.js")
 
         //- Google Analytics: change UA-XXXXX-X to be your site's ID.
