--- a/partials/jade/styleguide.jade
+++ b/partials/jade/styleguide.jade
@@ -27,6 +27,7 @@
     a.btn.btn-white .btn.btnwhite
     a.btn.btn-primary .btn.btn-primary
     a.btn.btn-secondary .btn.btn-secondary
+    a.btn.btn-danger .btn.btn-danger
     a.btn.btn-invert .btn.btn-invert
 
     .spacer-3
