--- a/stylesheets/sass/_variables.scss
+++ b/stylesheets/sass/_variables.scss
@@ -12,11 +12,15 @@ $spacing: 20;
 //COLORS
 $body-color: #F8F8F8;
 
-$primary-color: #EB7B3D; //orange color
-$primary-color-darken: #ab5538;
+$primary-color: #4FC388; //green color
+$primary-color-darken: #408c5f;
 
-$secondary-color: #54B60B;//green color
-$secondary-color-darken: #47910F;
+$secondary-color: #43AEEB;//blue color
+$secondary-color-darken: #2f77a2;
+
+$danger-color:#F06560;
+$danger-color-darken: #984341;
+
 
 $invert-color: #3E4652;
 $invert-color-darken: #1D242E;
