btn-link button

--- a/partials/jade/styleguide.jade
+++ b/partials/jade/styleguide.jade
@@ -24,6 +24,7 @@
 
     h3 Normal size
     a.btn Simple .btn
+    a.btn.btn-link .btn.btn-link
     a.btn.btn-white .btn.btnwhite
     a.btn.btn-primary .btn.btn-primary
     a.btn.btn-secondary .btn.btn-secondary
@@ -32,11 +33,12 @@
 
     .spacer-3
     h3 Normal size + relevance
-    a.btn.btn-hero Simple .btn
-    a.btn.btn-white.btn-hero .btn.btnwhite
-    a.btn.btn-primary.btn-hero .btn.btn-primary
-    a.btn.btn-secondary.btn-hero .btn.btn-secondary
-    a.btn.btn-invert.btn-hero .btn.btn-invert
+    a.btn.btn-hero Simple btn-hero
+    a.btn.btn-white.btn-hero btn-hero
+    a.btn.btn-primary.btn-hero btn-hero
+    a.btn.btn-secondary.btn-hero btn-hero
+    a.btn.btn-danger.btn-hero btn-hero
+    a.btn.btn-invert.btn-hero btn-hero
 
     .spacer-3
     h3 Mini size
