--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -1120,7 +1120,7 @@ select {
 .uppercase {
   text-transform: uppercase; }
 
-/* line 15, ../modules/_buttons.scss */
+/* line 17, ../modules/_buttons.scss */
 .btn {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -1142,17 +1142,19 @@ select {
   animation: all 0.3s ease-in-out; }
   /* line 5, ../modules/_buttons.scss */
   .btn:hover {
+    cursor: pointer;
     -webkit-box-shadow: 0 3px 0 0 lightgray;
     -moz-box-shadow: 0 3px 0 0 lightgray;
     box-shadow: 0 3px 0 0 lightgray;
     top: -1px; }
-  /* line 9, ../modules/_buttons.scss */
+  /* line 10, ../modules/_buttons.scss */
   .btn:active {
+    cursor: pointer;
     -webkit-box-shadow: 0 0 0 0 lightgray;
     -moz-box-shadow: 0 0 0 0 lightgray;
     box-shadow: 0 0 0 0 lightgray;
     top: 2px; }
-  /* line 33, ../modules/_buttons.scss */
+  /* line 35, ../modules/_buttons.scss */
   .btn.btn-primary {
     color: white;
     font-weight: 400;
@@ -1162,17 +1164,19 @@ select {
     box-shadow: 0 2px 0 0 #408c5f; }
     /* line 5, ../modules/_buttons.scss */
     .btn.btn-primary:hover {
+      cursor: pointer;
       -webkit-box-shadow: 0 3px 0 0 #408c5f;
       -moz-box-shadow: 0 3px 0 0 #408c5f;
       box-shadow: 0 3px 0 0 #408c5f;
       top: -1px; }
-    /* line 9, ../modules/_buttons.scss */
+    /* line 10, ../modules/_buttons.scss */
     .btn.btn-primary:active {
+      cursor: pointer;
       -webkit-box-shadow: 0 0 0 0 #408c5f;
       -moz-box-shadow: 0 0 0 0 #408c5f;
       box-shadow: 0 0 0 0 #408c5f;
       top: 2px; }
-  /* line 42, ../modules/_buttons.scss */
+  /* line 44, ../modules/_buttons.scss */
   .btn.btn-secondary {
     color: white;
     font-weight: 400;
@@ -1182,17 +1186,19 @@ select {
     box-shadow: 0 2px 0 0 #2f77a2; }
     /* line 5, ../modules/_buttons.scss */
     .btn.btn-secondary:hover {
+      cursor: pointer;
       -webkit-box-shadow: 0 3px 0 0 #2f77a2;
       -moz-box-shadow: 0 3px 0 0 #2f77a2;
       box-shadow: 0 3px 0 0 #2f77a2;
       top: -1px; }
-    /* line 9, ../modules/_buttons.scss */
+    /* line 10, ../modules/_buttons.scss */
     .btn.btn-secondary:active {
+      cursor: pointer;
       -webkit-box-shadow: 0 0 0 0 #2f77a2;
       -moz-box-shadow: 0 0 0 0 #2f77a2;
       box-shadow: 0 0 0 0 #2f77a2;
       top: 2px; }
-  /* line 51, ../modules/_buttons.scss */
+  /* line 53, ../modules/_buttons.scss */
   .btn.btn-danger {
     color: white;
     font-weight: 400;
@@ -1202,17 +1208,19 @@ select {
     box-shadow: 0 2px 0 0 #984341; }
     /* line 5, ../modules/_buttons.scss */
     .btn.btn-danger:hover {
+      cursor: pointer;
       -webkit-box-shadow: 0 3px 0 0 #984341;
       -moz-box-shadow: 0 3px 0 0 #984341;
       box-shadow: 0 3px 0 0 #984341;
       top: -1px; }
-    /* line 9, ../modules/_buttons.scss */
+    /* line 10, ../modules/_buttons.scss */
     .btn.btn-danger:active {
+      cursor: pointer;
       -webkit-box-shadow: 0 0 0 0 #984341;
       -moz-box-shadow: 0 0 0 0 #984341;
       box-shadow: 0 0 0 0 #984341;
       top: 2px; }
-  /* line 60, ../modules/_buttons.scss */
+  /* line 62, ../modules/_buttons.scss */
   .btn.btn-invert {
     color: white;
     background: #3e4652;
@@ -1221,17 +1229,19 @@ select {
     box-shadow: 0 2px 0 0 #1d242e; }
     /* line 5, ../modules/_buttons.scss */
     .btn.btn-invert:hover {
+      cursor: pointer;
       -webkit-box-shadow: 0 3px 0 0 #1d242e;
       -moz-box-shadow: 0 3px 0 0 #1d242e;
       box-shadow: 0 3px 0 0 #1d242e;
       top: -1px; }
-    /* line 9, ../modules/_buttons.scss */
+    /* line 10, ../modules/_buttons.scss */
     .btn.btn-invert:active {
+      cursor: pointer;
       -webkit-box-shadow: 0 0 0 0 #1d242e;
       -moz-box-shadow: 0 0 0 0 #1d242e;
       box-shadow: 0 0 0 0 #1d242e;
       top: 2px; }
-  /* line 68, ../modules/_buttons.scss */
+  /* line 70, ../modules/_buttons.scss */
   .btn.btn-white {
     background: white;
     -webkit-box-shadow: 0 2px 0 0 #e5e5e5;
@@ -1239,24 +1249,37 @@ select {
     box-shadow: 0 2px 0 0 #e5e5e5; }
     /* line 5, ../modules/_buttons.scss */
     .btn.btn-white:hover {
+      cursor: pointer;
       -webkit-box-shadow: 0 3px 0 0 #e5e5e5;
       -moz-box-shadow: 0 3px 0 0 #e5e5e5;
       box-shadow: 0 3px 0 0 #e5e5e5;
       top: -1px; }
-    /* line 9, ../modules/_buttons.scss */
+    /* line 10, ../modules/_buttons.scss */
     .btn.btn-white:active {
+      cursor: pointer;
       -webkit-box-shadow: 0 0 0 0 #e5e5e5;
       -moz-box-shadow: 0 0 0 0 #e5e5e5;
       box-shadow: 0 0 0 0 #e5e5e5;
       top: 2px; }
   /* line 77, ../modules/_buttons.scss */
+  .btn.btn-link {
+    background: white;
+    color: #4a90e2;
+    -webkit-box-shadow: 0 2px 0 0 white;
+    -moz-box-shadow: 0 2px 0 0 white;
+    box-shadow: 0 2px 0 0 white; }
+    /* line 81, ../modules/_buttons.scss */
+    .btn.btn-link:hover {
+      cursor: pointer;
+      text-decoration: underline; }
+  /* line 87, ../modules/_buttons.scss */
   .btn.btn-mini {
     font-size: .9rem;
     padding: .4rem .7rem; }
-  /* line 83, ../modules/_buttons.scss */
+  /* line 93, ../modules/_buttons.scss */
   .btn[disabled], .btn.disabled {
     opacity: 0.6; }
-  /* line 88, ../modules/_buttons.scss */
+  /* line 98, ../modules/_buttons.scss */
   .btn.btn-hero {
     text-transform: uppercase;
     font-weight: 700;
